# Wapi

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  Wapi.cpp  Wapi.slnx  Wapi.vcxproj  Wapi.vcxproj.filters  design-qa.md  evaluator.cpp  evaluator.h  index.html  lexer.cpp  lexer.h  package-lock.json  package.json  parser.cpp  parser.h  tauri.qa.conf.json  vite.config.js  wapi_roadmap.html
.codex/environments/: environment.toml
TestDLL/: TestDLL.cpp  dllmain.cpp
docs/: language.md
docs/design/: README.md
electron/: main.cjs  preload.cjs
examples/: include_demo.wapi  injection_smoke_test.wapi  language.wapi  language_feature_tour.wapi  manual_map_native_dll.wapi  memory-sandbox.wapi  memory.wapi  memory_reader.wapi  module_inspector.wapi  privilege_checker.wapi  process-inspector.wapi  process.wapi  process_check.wapi  process_helpers.wapi  process_scanner.wapi  thread_inspector.wapi  window_finder.wapi
native/: Wapi.vcxproj  Wapi.vcxproj.filters
native/TestDLL/: TestDLL.h  TestDLL.vcxproj  TestDLL.vcxproj.filters
native/src/: Wapi.cpp  capability_policy.cpp  capability_policy.h  evaluator.cpp  evaluator.h  lexer.cpp  lexer.h  manual_mapper.cpp  manual_mapper.h  memory_inspector.cpp  memory_inspector.h  parser.cpp  parser.h
scripts/: dev-electron.mjs
src/: focused-shell.css  forge-ops.css  main.js  main.jsx  styles.css  tauri-bridge.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs  projects.rs  runtime.rs  terminal.rs  window.rs
